implement Employee management of trails.

--- a/src/main/webapp/employees.xhtml
+++ b/src/main/webapp/employees.xhtml
@@ -15,6 +15,11 @@
 				<f:facet name="header"></f:facet>
 				#{employee.name}
 			</h:column>
+			<h:column>
+				<f:facet name="header"></f:facet>
+				#{employee.trail.description}
+			</h:column>
+
 		</h:dataTable>
 		
 		<h:form>
