add REST API and error handling

--- a/src/main/webapp/animals.xhtml
+++ b/src/main/webapp/animals.xhtml
@@ -35,8 +35,20 @@
 		</h:dataTable>
 		</h:form>
 		<small>Logged as: #{loginBean.login}</small>
-
-	
+		
+		<h:form>
+			<h:commandLink value="Logout" action="#{loginBean.logout}"/>
+		</h:form>
 	</ui:define>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 </ui:composition>
